--- a/app/src/main/res/layout/user_imageview.xml
+++ b/app/src/main/res/layout/user_imageview.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -12,22 +12,6 @@
         android:id="@+id/image_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/cardforntimage"/>
+        android:src="@mipmap/ic_android_launcher_round_round"/>
 
-
-    <ImageView
-        android:id="@+id/editImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="right"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="184dp"
-        android:src="@drawable/circular_shape"
-        app:layout_constraintBottom_toBottomOf="@+id/image_view"
-        app:layout_constraintEnd_toEndOf="@+id/image_view"
-        app:layout_constraintHorizontal_bias="0.977"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image_view"
-        app:layout_constraintVertical_bias="0.352" />
 </android.support.constraint.ConstraintLayout>
