--- a/app/src/main/res/layout/user_imageview.xml
+++ b/app/src/main/res/layout/user_imageview.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:src="@mipmap/ic_android_launcher_round_round"/>
 
 </android.support.constraint.ConstraintLayout>
