--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,10 +8,25 @@
     <dimen name="app_bar_height">256dp</dimen>
     <dimen name="expanded_toolbar_title_margin_start">64dp</dimen>
     <dimen name="layout_width_height_100dp">100dp</dimen>
-
+    <!-- Text Size. -->
+    <dimen name="text08sp">8sp</dimen>
+    <dimen name="text09sp">9sp</dimen>
+    <dimen name="text10sp">10sp</dimen>
+    <dimen name="text11sp">11sp</dimen>
+    <dimen name="text12sp">12sp</dimen>
+    <dimen name="text13sp">13sp</dimen>
+    <dimen name="text14sp">14sp</dimen>
+    <dimen name="text15sp">15sp</dimen>
+    <dimen name="text16sp">16sp</dimen>
+    <dimen name="text20dp">20sp</dimen>
+    <dimen name="text30dp">30sp</dimen>
+    <dimen name="text40dp">40sp</dimen>
+    <dimen name="text50dp">50sp</dimen>
+    <dimen name="text100dp">100sp</dimen>
 
     <dimen name="primary_button_width">250dp</dimen>
     <dimen name="profilesize">150dp</dimen>
+    <dimen name="margin5dp">5dp</dimen>
     <integer name="max_width_short_month_label_dp">240</integer>
     <integer name="max_height_mini_view_dp">180</integer>
     <integer name="max_height_mini_view_1_row_dp">120</integer>
