--- a/app/src/main/res/layout/activity_business_card.xml
+++ b/app/src/main/res/layout/activity_business_card.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".acitvities.BusinessCard">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/mapapp_toolbar"/>
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
