--- a/app/src/main/res/layout/card_options.xml
+++ b/app/src/main/res/layout/card_options.xml
@@ -17,14 +17,16 @@
         android:id="@+id/imageview_gallery"
         android:layout_width="52dp"
         android:layout_height="52dp"
+        android:layout_marginRight="32dp"
         android:layout_marginLeft="32dp"
 
         android:src="@drawable/ic_menu_gallery" />
 
     <ImageView
         android:id="@+id/imageview_qrcode"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="5dp"
         android:layout_marginLeft="32dp"
 
         android:src="@drawable/icon_qr_code" />
