--- a/app/src/main/res/drawable/edittext_shape_with_zero_corner.xml
+++ b/app/src/main/res/drawable/edittext_shape_with_zero_corner.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/editTextColor" />
-    <corners android:radius="0dp" />
+    <corners android:radius="2dp" />
 
     <stroke
-        android:width="0dp"
-        android:color="#eceff1" />
+        android:width="1dp"
+        android:color="@color/secondaryTextColor"/>
     <padding
         android:bottom="5dp"
         android:left="5dp"
