--- a/app/src/main/res/layout/activity_employee_leave_request.xml
+++ b/app/src/main/res/layout/activity_employee_leave_request.xml
@@ -10,183 +10,51 @@
     <include
         android:id="@+id/app_bar"
         layout="@layout/app_toolbar"/>
-    <HorizontalScrollView android:id="@+id/horizontal_scroll_view"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
 
-        android:scrollbars="horizontal">
-
-
-    <ScrollView android:id="@+id/vertical_scroll_view"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:scrollbars="vertical">
-    <TableLayout
-        android:id="@+id/tableview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/leave_requestRecyclerViewId"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+    </android.support.v7.widget.RecyclerView>
 
-            <TextView
-                android:text="@string/employee_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/no_data_availableLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-            <TextView
-                android:text="@string/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-            <TextView
-                android:text="@string/Leave_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-            <TextView
-                android:text="@string/from"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
+        <ImageView
+            android:id="@+id/refresh_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/icon_refresh_black"
+            app:layout_constraintBottom_toTopOf="@+id/no_data_available"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.859" />
 
-            <TextView
-                android:text="@string/to"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-            <TextView
-                android:text="@string/days"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-            <TextView
-                android:text="@string/leave_reason_edt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-            <TextView
-                android:text="@string/status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-            <TextView
-                android:text="@string/remark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-            <TextView
-                android:text="@string/submit_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_column="1" />
-        </TableRow>
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:layout_column="1"/>
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:layout_column="1"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:editable="false" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:layout_column="1"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:editable="false"/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:layout_column="1"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:editable="false" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:layout_column="1"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:editable="false" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:editable="false"
-                android:textAlignment="center"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:textSize="14dp" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:layout_column="1"
-                android:editable="false" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:layout_column="1"
-                android:editable="false" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text13sp"
-                android:background="@drawable/edittext_shape_with_zero_corner"
-                android:layout_column="1"
-                android:editable="false" />
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:background="@color/btn_enabledColor"
-                android:textSize="8dp"
-                android:layout_column="1"
-                android:editable="false" />
-        </TableRow>
-    </TableLayout>
-    </ScrollView>
-    </HorizontalScrollView>
+        <TextView
+            android:id="@+id/no_data_available"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/no_data_available"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 </TableLayout>
