--- a/app/src/main/res/layout/activity_mark_attendance.xml
+++ b/app/src/main/res/layout/activity_mark_attendance.xml
@@ -199,14 +199,16 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/user_imageId"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="8dp"
                         android:src="@mipmap/ic_android_launcher_round_round"
                         app:civ_border_color="#FF000000"
                         app:civ_border_width="2dp"
+                        android:layout_gravity="center"
+
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
