--- a/app/src/main/res/layout/attendance_popup.xml
+++ b/app/src/main/res/layout/attendance_popup.xml
@@ -160,6 +160,15 @@
                 android:text="12 july,18"
                 android:textSize="12sp" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/edit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/text30dp"
+            android:background="@color/colorPrimary"
+            android:text="@string/edit"
+            android:textSize="@dimen/margin10dp"
+            android:visibility="gone"/>
     </LinearLayout>
 
 
