--- a/app/src/main/res/layout/nav_header_main_home.xml
+++ b/app/src/main/res/layout/nav_header_main_home.xml
@@ -19,7 +19,7 @@
         android:layout_height="70dp"
         android:src="@mipmap/ic_android_launcher_round_round"
         app:civ_border_width="2dp"
-        app:civ_border_color="#FF000000"
+        app:civ_border_color="#FFFFFF"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
