--- a/app/src/main/res/layout/attendance_popup.xml
+++ b/app/src/main/res/layout/attendance_popup.xml
@@ -165,9 +165,10 @@
             android:id="@+id/edit_btn"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/text30dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/DKGRAY"
             android:text="@string/edit"
             android:textSize="@dimen/margin10dp"
+            android:textColor="@color/white"
             android:visibility="gone"/>
     </LinearLayout>
 
