--- a/app/src/main/res/layout/activity_docket_enquiry.xml
+++ b/app/src/main/res/layout/activity_docket_enquiry.xml
@@ -18,14 +18,14 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="180dp"
-        android:text="@string/searchbytype"
-        android:textSize="25sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="180dp"
+            android:text="@string/searchbytype"
+            android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,12 +64,15 @@
                 android:id="@+id/input_editSearch_text_id"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:background="@drawable/edittext_shape"
                 android:drawableRight="@android:drawable/ic_menu_search"
+                android:hint="Enter docket/invoice no."
                 android:inputType="number"
                 android:shadowRadius="50"
                 android:textAlignment="gravity"
-                android:hint="Enter docket/invoice no."
+                android:textSize="@dimen/text12sp"
                 app:layout_constraintBottom_toTopOf="@+id/progressBar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,14 +87,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
         </android.support.constraint.ConstraintLayout>
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/button_shape"
-        android:padding="12dp"
-        android:textColor="@color/white"
-        android:text="@string/searchbtn" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/button_shape"
+            android:padding="12dp"
+            android:text="@string/searchbtn"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
     </LinearLayout>
 </LinearLayout>
