--- a/app/src/main/res/layout/apply_leave_view.xml
+++ b/app/src/main/res/layout/apply_leave_view.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/from"
-            android:inputType="date" />
+            android:inputType="date"
+            android:focusable="false" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
