--- a/app/src/main/res/layout/broker_approval_listview.xml
+++ b/app/src/main/res/layout/broker_approval_listview.xml
@@ -34,6 +34,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/broker_selection_no"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
@@ -50,21 +51,22 @@
                 android:editable="false"
                 android:maxLines="1"
                 android:textColor="@color/primaryTextColor"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                android:visibility="gone"/>
             <Button
                 android:id="@+id/btn_broker_selection"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".7"
+                android:layout_weight=".3"
                 android:text="@string/approve"
                 android:textAllCaps="false"
                 android:background="@drawable/button_shape"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
             <Button
                 android:id="@+id/btn_broker_selectionReject"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".7"
+                android:layout_weight=".3"
                 android:text="@string/reject"
                 android:layout_marginLeft="@dimen/margin2dp"
                 android:textAllCaps="false"
@@ -87,14 +89,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/margin16dp"
                 android:text="@string/show"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <android.support.v7.widget.CardView
             android:id="@+id/broker1_rate_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <LinearLayout
                 android:id="@+id/broker_list1_layout"
@@ -126,7 +129,7 @@
                         android:layout_weight=".5"
                         android:text="@string/broker_name"
                         android:textColor="@color/primaryTextColor"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
 
                     <EditText
                         android:id="@+id/edtbrokerName"
