--- a/app/src/main/res/menu/activity_main_home_drawer.xml
+++ b/app/src/main/res/menu/activity_main_home_drawer.xml
@@ -45,7 +45,7 @@
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Feedback" />
         </menu>
     </item>
 
