--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,6 @@
     <color name="gray">#757575</color>
     <color name="red">#FFFF0000</color>FF444444
     <color name="DKGRAY">#FF444444</color>
+    <color name = "GreenShade4DD">#9ccc65</color>
 
 </resources><!--<resources>--><!--<color name="colorPrimary">#3F51B5</color>--><!--<color name="colorPrimaryDark">#303F9F</color>--><!--<color name="colorAccent">#FF4081</color>--><!--</resources>-->
