--- a/app/src/main/res/menu/activity_main_home_drawer.xml
+++ b/app/src/main/res/menu/activity_main_home_drawer.xml
@@ -46,6 +46,10 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Feedback" />
+            <item
+                android:id="@+id/nav_info"
+                android:icon="@drawable/ic_info_black_24dp"
+                android:title="Information" />
         </menu>
     </item>
 
