--- a/app/src/main/res/layout/applied_leave_listview.xml
+++ b/app/src/main/res/layout/applied_leave_listview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:orientation="vertical"
@@ -15,14 +16,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="70dp"
+                android:layout_height="70dp">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/leaveStatusIndicator"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/transpant"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
-            <TextView
-                android:id="@+id/txttype"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="CL"
-                android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/txttype"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center"
+                    android:text="CL"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/leaveStatusIndicator"
+                    app:layout_constraintEnd_toEndOf="@+id/leaveStatusIndicator"
+                    app:layout_constraintStart_toStartOf="@+id/leaveStatusIndicator"
+                    app:layout_constraintTop_toTopOf="@+id/leaveStatusIndicator" />
+            </android.support.constraint.ConstraintLayout>
+
             <TextView
                 android:id="@+id/txtpin_no"
                 android:layout_width="wrap_content"
