--- a/app/src/main/res/layout/activity_employee_leave_request.xml
+++ b/app/src/main/res/layout/activity_employee_leave_request.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/req_leave_coordinate_layout"
     tools:context=".acitvities.EmployeeLeaveRequestActivity">
 
     <include
@@ -57,4 +58,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
-</TableLayout>
+</android.support.design.widget.CoordinatorLayout>
