--- a/app/src/main/res/layout/activity_hrms.xml
+++ b/app/src/main/res/layout/activity_hrms.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/android_coordinator_layoutId"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/app_bar"
-        layout="@layout/app_toolbar"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-                <GridView
-                    android:id="@+id/gridhrms"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:numColumns="3"
-                    android:divider="@color/black"
-                    android:dividerHeight="1dip" />
+        <include
+            android:id="@+id/app_bar"
+            layout="@layout/app_toolbar" />
 
-</LinearLayout>
+        <GridView
+            android:id="@+id/gridhrms"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/black"
+            android:dividerHeight="1dip"
+            android:gravity="center"
+            android:numColumns="3" />
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
