--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,6 +36,7 @@
     <dimen name="margin13sp">13sp</dimen>
     <dimen name="text18sp">18sp</dimen>
     <dimen name="text20sp">20sp</dimen>
+    <dimen name="text60dp">60dp</dimen>
     <integer name="max_width_short_month_label_dp">240</integer>
     <integer name="max_height_mini_view_dp">180</integer>
     <integer name="max_height_mini_view_1_row_dp">120</integer>
